[package]
name = "rusty-snake"
version = "0.1.0"
authors = ["Ashton S."]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34"
rand = "0.8"
 orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" } 