[package]
name = "rusty-snake"
version = "0.1.0"
authors = ["Ashton S."]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
piston = "0.53.0"
piston_window = "0.121.0"
piston2d-graphics = "0.41.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.79.0"